@@ -141,13 +141,14 @@
 #define ID_VIEW_                        32781
 #define ID_VIEW_OPTIONS                 32782
 #define ID_BUTTON32783                  32783
+#define ID_EDIT_FINDNEXT                32789
 
 // Next default values for new objects
 // 
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        139
-#define _APS_NEXT_COMMAND_VALUE         32784
+#define _APS_NEXT_COMMAND_VALUE         32791
 #define _APS_NEXT_CONTROL_VALUE         1066
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
