@@ -1,3 +1,4 @@
+- ADD: Find dialog for TortoiseMerge. (Stefan)
 - CHG: When "Ignore all whitespaces" is active and 
        "don't show whitespaces" then the line diff bar
        doesn't show those whitespaces. (Stefan)
